--- a/test_task_Pavelko_fin_vers.ipynb
+++ b/test_task_Pavelko_fin_vers.ipynb
@@ -155,6 +155,8 @@
         "    result['Id'] = ids\n",
         "    result['SalePrice'] = y_test_predicted\n",
         "    result.to_csv('prediction.csv')\n",
+        "    # the adj r-squared is 0.9 and the Root Mean Square Error is around 25000\n",
+        "    # which are signs of high efficiency of this linear model.\n",
         "    return f\"R-squared = {r_squared}, Adjusted R-squared = {adj_r_squared}, RMSE = {rmse}\", result \n",
         "\n",
         "\n",
